--- a/packages/qt5-base/qmake.conf
+++ b/packages/qt5-base/qmake.conf
@@ -1,4 +1,5 @@
-QT_QPA_DEFAULT_PLATFORM = xcb
+QT_QPA_DEFAULT_PLATFORM = eglfs
+EGLFS_DEVICE_INTEGRATION = eglfs_surfaceflinger
 
 MAKEFILE_GENERATOR      = UNIX
 CONFIG                 += incremental
