--- a/packages/qt5-base/qmake.conf
+++ b/packages/qt5-base/qmake.conf
@@ -19,8 +19,8 @@ QMAKE_OBJCOPY           = @TERMUX_OBJCOPY@
 QMAKE_PKG_CONFIG        = @TERMUX_PKGCONFIG@
 QMAKE_STRIP             = @TERMUX_STRIP@
 
-QMAKE_CFLAGS           += @TERMUX_CFLAGS@
-QMAKE_CXXFLAGS         += @TERMUX_CXXFLAGS@
+QMAKE_CFLAGS           += -fstack-protector-strong -Oz @TERMUX_CFLAGS@
+QMAKE_CXXFLAGS         += -fstack-protector-strong -Oz @TERMUX_CXXFLAGS@
 QMAKE_LFLAGS           += @TERMUX_LDFLAGS@
 QMAKE_LFLAGS_SHLIB     += -shared
 QMAKE_LFLAGS_PLUGIN    += -shared
