--- a/packages/qt5-base/qmake.conf
+++ b/packages/qt5-base/qmake.conf
@@ -9,6 +9,9 @@ include(../common/linux.conf)
 include(../common/gcc-base-unix.conf)
 include(../common/clang.conf)
 
+DEFINES                += Q_OS_ANDROID_EMBEDDED
+CONFIG                 += android-embedded
+
 QMAKE_CC                = @TERMUX_CC@
 QMAKE_CXX               = @TERMUX_CXX@
 QMAKE_LINK              = $${QMAKE_CXX}
@@ -19,8 +22,8 @@ QMAKE_OBJCOPY           = @TERMUX_OBJCOPY@
 QMAKE_PKG_CONFIG        = @TERMUX_PKGCONFIG@
 QMAKE_STRIP             = @TERMUX_STRIP@
 
-QMAKE_CFLAGS           += -fstack-protector-strong -Oz @TERMUX_CFLAGS@
-QMAKE_CXXFLAGS         += -fstack-protector-strong -Oz @TERMUX_CXXFLAGS@
+QMAKE_CFLAGS           += @TERMUX_CFLAGS@
+QMAKE_CXXFLAGS         += @TERMUX_CXXFLAGS@
 QMAKE_LFLAGS           += @TERMUX_LDFLAGS@
 QMAKE_LFLAGS_SHLIB     += -shared
 QMAKE_LFLAGS_PLUGIN    += -shared
